SERVER-28889 Partial index shouldn't do fetch on conditions that are true by the definition of the index